# drive-or-fly-django

./: db.sqlite3  pyproject.toml  replit.nix
TransportationComparison/: forms.py  urls.py  views.py
TransportationComparison/services/: flightApiService.py  gasApiService.py  googleMaps.py
TransportationComparison/templates/: index.html  result.html
django_project/: settings.py  urls.py
